# Review-radar

./: .gitignore  EDA.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  run_dashboard.py  run_pipeline.py
data/annotation/: annotation_guidelines.md  manual_review_sample.csv
data/exports/: reviewradar_master_raw.csv
data/reports/: annotation_analysis_report.md  annotation_readiness_report.json  annotation_report.json  aspect_audit_report.md  aspect_classification.json  aspect_classification_oversampled.json  aspect_classification_oversampled_report.md  aspect_classification_report.md  aspect_oversampling_comparison.md  aspect_oversampling_report.md  insight_model_comparison.md  language_audit_report.json  master_dataset_report.json  other_sample.csv  preprocessing_report.json  sentiment_evaluation.json  sentiment_evaluation_report.md  spam_audit.csv
notebooks/: EDA.ipynb  manual_review_sample.csv
scripts/: analyze_annotations.py  run_aspect_audit.py  run_aspect_classification.py  run_aspect_oversampling.py  run_aspect_oversampling_eval.py  run_insight_generation.py  run_insight_generation_oversampled.py  run_pseudolabel_v2.py  run_pseudolabeling.py  run_self_training.py  run_sentiment_evaluation.py  train_sentiment.py
src/reviewradar/: __init__.py  version.py
src/scraper/: __init__.py  comment_extractor.py  video_metadata.py  video_search.py  youtube_client.py
tests/: __init__.py  conftest.py  test_annotation.py  test_cleaning.py  test_data_validation.py  test_dataset_export.py  test_language_audit.py  test_preprocessing.py  test_settings.py
(+90 files in other folders)
